@@ -1,3 +1,5 @@
 *~
 *.o
 boxyseq
+core
+
