@@ -3,19 +3,10 @@
 #include "common.h"
 #include "debug.h"
 #include "event_pool.h"
+#include "real_time_data.h"
 
 
 #include <stdlib.h>
-
-
-typedef struct rt_grid_boundary
-{
-    int flags;
-    int channel;
-    int scale_bin;
-    int scale_key;
-
-} rtbound;
 
 
 struct grid_boundary
@@ -30,46 +21,26 @@ struct grid_boundary
 
     moport*     midiout;
 
-    struct grid_boundary* volatile  grb;
-    struct grid_boundary* volatile  grb_in_use;
-    struct grid_boundary*           grb_old;
-    struct grid_boundary*           grb_free;
+    rtdata*     rt;
 };
+
+
+static grbound* grbound_private_new(_Bool with_rtdata);
+static grbound* grbound_private_dup(const void* grb, _Bool with_rtdata);
+
+static void*    grbound_rtdata_get_cb(const void* grb);
+static void     grbound_rtdata_free_cb(void* grb);
 
 
 grbound* grbound_new(void)
 {
-    grbound* grb = malloc(sizeof(*grb));
+    return grbound_private_new(1);
+}
 
-    if (!grb)
-        goto fail;
 
-    if (!(grb->bound = fsbound_new()))
-        goto fail;
-
-    fsbound_init(grb->bound);
-
-    grb->flags = FSPLACE_ROW_SMART
-               | FSPLACE_LEFT_TO_RIGHT
-               | FSPLACE_TOP_TO_BOTTOM
-               | GRBOUND_BLOCK_ON_NOTE_FAIL;
-
-    grb->scale_bin = binary_string_to_int("111111111111");
-    grb->scale_key = 0;
-    grb->evinput = 0;
-    grb->midiout = 0;
-
-    #ifdef GRID_DEBUG
-    MESSAGE("grbound created:%p\n",grb);
-    #endif
-
-    return grb;
-
-fail:
-    fsbound_free(grb->bound);
-    free(grb);
-    WARNING("out of memory for grid boundary\n");
-    return 0;
+grbound* grbound_dup(const grbound* grb)
+{
+    return grbound_private_dup(grb, 1);
 }
 
 
@@ -78,6 +49,7 @@ void grbound_free(grbound* grb)
     if (!grb)
         return;
 
+    rtdata_free(grb->rt);
     fsbound_free(grb->bound);
     free(grb);
 }
@@ -161,27 +133,141 @@ fsbound* grbound_fsbound(grbound* grb)
 }
 
 
+void grbound_fsbound_set(grbound* grb, int x, int y, int w, int h)
+{
+    fsbound* fsb = grbound_fsbound(grb);
+
+    if (!fsbound_set_coords(fsb, x, y, w, h))
+    {
+        WARNING("boundary x:%d y:%d w:%d h:%d out of bounds\n",
+                x, y, w, h);
+        WARNING("default size will be used\n");
+    }
+}
+
+
 void grbound_set_input_port(grbound* grb, evport* port)
 {
     grb->evinput = port;
 }
 
 
+void grbound_update_rt_data(const grbound* grb)
+{
+    rtdata_update(grb->rt);
+}
+
+
 void grbound_rt_sort(grbound* grb, evport* port)
 {
     event ev;
+    grbound* rtgrb = rtdata_data(grb->rt);
 
-    evport_read_reset(grb->evinput);
+    if (!rtgrb)
+    {
+        WARNING("no grbound RT data\n");
+        return;
+    }
 
-    while (evport_read_event(grb->evinput, &ev))
+    evport_read_reset(rtgrb->evinput);
+
+    while (evport_read_event(rtgrb->evinput, &ev))
     {
         ev.grb = grb;
-        EVENT_CHANNEL_SET(&ev, grb->channel);
+        EVENT_CHANNEL_SET(&ev, rtgrb->channel);
         if (!evport_write_event(port, &ev))
             WARNING("failed to write sort to port\n");
     }
 }
 
+
+/*  STATIC/PRIVATE implementation:
+*/
+
+static grbound* grbound_private_new(_Bool with_rtdata)
+{
+    grbound* grb = malloc(sizeof(*grb));
+
+    if (!grb)
+        goto fail0;
+
+    if (!(grb->bound = fsbound_new()))
+        goto fail1;
+
+    if (with_rtdata)
+    {
+        grb->rt = rtdata_new(grb,   grbound_rtdata_get_cb,
+                                    grbound_rtdata_free_cb );
+        if (!grb->rt)
+            goto fail2;
+    }
+    else
+        grb->rt = 0;
+
+    fsbound_init(grb->bound);
+
+    grb->flags = FSPLACE_ROW_SMART
+               | FSPLACE_LEFT_TO_RIGHT
+               | FSPLACE_TOP_TO_BOTTOM
+               | GRBOUND_BLOCK_ON_NOTE_FAIL;
+
+    grb->scale_bin = binary_string_to_int("111111111111");
+    grb->scale_key = 0;
+    grb->evinput = 0;
+    grb->midiout = 0;
+
+    #ifdef GRID_DEBUG
+    MESSAGE("grbound created:%p\n",grb);
+    #endif
+
+    return grb;
+
+fail2:  fsbound_free(grb->bound);
+fail1:  free(grb);
+fail0:  WARNING("out of memory for grid boundary\n");
+    return 0;
+}
+
+
+static grbound* grbound_private_dup(const void* data, _Bool with_rtdata)
+{
+    const grbound* grb = data;
+    grbound* dest = grbound_private_new(with_rtdata);
+
+    if (!dest)
+        return 0;
+
+    dest->flags =       grb->flags;
+    dest->scale_bin =   grb->scale_bin;
+    dest->scale_key =   grb->scale_key;
+    dest->evinput =     grb->evinput;
+    dest->midiout =     grb->midiout;
+
+    fsbound_copy(dest->bound, grb->bound);
+
+    return dest;
+}
+
+
+static void* grbound_rtdata_get_cb(const void* grb)
+{
+    grbound_private_dup(grb, 0);
+}
+
+
+static void grbound_rtdata_free_cb(void* grb)
+{
+    grbound_free(grb);
+}
+
+
+/************************************************************************
+ ************************************************************************
+ ************************************************************************
+ **************** box_grid data structure and functions *****************
+ ************************************************************************
+ ************************************************************************
+ ***********************************************************************/
 
 struct box_grid
 {
@@ -301,10 +387,11 @@ void grid_rt_place(grid* gr, bbt_t ph, bbt_t nph)
 
     while(evport_read_and_remove_event(gr->global_in_port, &ev))
     {
+        grbound* rtgrb = rtdata_data(ev.grb->rt);
 
         if (freespace_find(     gr->fs,
-                                ev.grb->bound,
-                                ev.grb->flags,
+                                rtgrb->bound,
+                                rtgrb->flags,
                                 ev.box_width,
                                 ev.box_height,
                                 &ev.box_x,
@@ -312,20 +399,20 @@ void grid_rt_place(grid* gr, bbt_t ph, bbt_t nph)
         {
             int pitch = ev.note_pitch = -1;
 
-            ev.note_velocity = (ev.grb->flags & FSPLACE_TOP_TO_BOTTOM)
+            ev.note_velocity = (rtgrb->flags & FSPLACE_TOP_TO_BOTTOM)
                                     ? ev.box_y
                                     : ev.box_y + ev.box_height;
 
             if (EVENT_IS_TYPE_NOTE( &ev ))
             {
                 ev.note_pitch =
-                    pitch = moport_start_event( ev.grb->midiout, &ev,
-                                                ev.grb->flags,
-                                                ev.grb->scale_bin,
-                                                ev.grb->scale_key );
+                    pitch = moport_start_event( rtgrb->midiout, &ev,
+                                                rtgrb->flags,
+                                                rtgrb->scale_bin,
+                                                rtgrb->scale_key );
                 if (pitch == -1)
                 {
-                    if (!(ev.grb->flags & GRBOUND_BLOCK_ON_NOTE_FAIL))
+                    if (!(rtgrb->flags & GRBOUND_BLOCK_ON_NOTE_FAIL))
                         continue;
 
                     EVENT_SET_TYPE_BLOCKED_NOTE( &ev );
@@ -479,3 +566,4 @@ void grid_remove_events(grid* gr)
     EVENT_SET_TYPE_CLEAR( &ev );
     evbuf_write(gr->ui_unplace_buf, &ev);
 }
+
