@@ -1,3 +1,10 @@
+* Tuesday 10th August 2010
+
+    * Pressing the grid button for the first time changes
+      the key and scale of the grbound placement. So connect
+      boxyseq up to your fave synth and listen to what it does
+      *BEFORE* pressing the 'grid' button :-)
+
 * Monday 9th August 2010
 
     * Mainly code changes signalling the start of getting
